--- a/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
+++ b/Resources/Private/Extensions/indexed_search/Templates/MainNavigationSearch.html
@@ -1,9 +1,11 @@
 <div class="tx-indexedsearch-searchbox">
     <f:form pageUid="{settings.targetPid}" method="post" absolute="0" action="search" extensionName="IndexedSearch" pluginName="pi2" controller="Search">
-        <div class="header-middle__search-wrp">
-            <div class="header-middle__search-box">
+        <div class="main-navigation__search-btn-wrp">
+            <a class="main-navigation__search-btn js__main-navigation__search-btn" href="#">Search<span></span></a>
+        </div>
+        <div class="main-navigation__search-box js__main-navigation__search-box">
+            <div class="awesomplete">
                 <f:form.textfield name="search[sword]" class="header-middle__search-input" />
-                <f:form.button type="submit" class=" header-middle__search-submit"><span class="icons icon-t3-search"></span></f:form.button>
             </div>
         </div>
     </f:form>
