--- a/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
@@ -90,19 +90,20 @@
     </f:else>
   </f:if>
 
+  <f:comment>Viewport for mobile devices (always 100% viewport widht)</f:comment>
+  <f:variable name="small_viewport_width">100</f:variable>
+
   <f:comment>
     Calculate picture_width based on selector in BE to define relative image width inside a content element
   </f:comment>
   <f:if condition="{image.referenceProperties.picture_width} && {image.picture_width} != 100">
     <f:variable name="fluid_viewport_width">{image.referenceProperties.picture_width*fluid_viewport_width/100}</f:variable>
     <f:variable name="fixed_viewport_width">{image.referenceProperties.picture_width*fixed_viewport_width/100}</f:variable>
+    <f:variable name="small_viewport_width">{image.referenceProperties.picture_width*small_viewport_width/100}</f:variable>
   </f:if>
 
-  <f:comment>Viewport for mobile devices (always 100% viewport widht)</f:comment>
-  <f:variable name="small_viewport_width">100vw</f:variable>
-
   <f:comment>Viewport for medium screens</f:comment>
-  <f:variable name="medium_viewport_width">{fluid_viewport_width}vm</f:variable>
+  <f:variable name="medium_viewport_width">{fluid_viewport_width}vw</f:variable>
 
   <f:comment>Viewport for big screens</f:comment>
   <f:if condition="{data.section_container_width} == 'container'">
@@ -132,7 +133,7 @@
         {f:uri.image(image: image, maxWidth: '480', cropVariant: 'mobile')} 480w,
         {f:uri.image(image: image, maxWidth: '768', cropVariant: 'mobile')} 768w,
         {f:uri.image(image: image, maxWidth: '1125', cropVariant: 'mobile')} 1125w"
-      sizes="{small_viewport_width}">
+      sizes="{small_viewport_width}vw">
 
     <source
       media="(min-width: 768px)"
