[TASK] changes to template and styling for big-icon-text-button and icon-text-button

--- a/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
+++ b/Resources/Private/Templates/ContentElements/Static/BigIconTextButton.html
@@ -10,7 +10,7 @@
       <f:render section="Content" arguments="{_all}" />
     </f:then>
     <f:else>
-      <f:link.typolink parameter="{data.link}">
+      <f:link.typolink parameter="{data.link}" class="big-icon-text-btn _whole-area-link">
         <f:render section="Content" arguments="{_all}" />
       </f:link.typolink>
     </f:else>
@@ -20,17 +20,16 @@
 <f:section name="Content">
   <div class="big-icon-text-btn__wrp">
     <div class="big-icon-text-btn">
-      <f:if condition="{flexform.iconClass}">
-        <span class="big-icon-text-btn__icon icons icon-{flexform.iconClass}" aria-hidden="true"></span>
+      <f:if condition="{data.icon}">
+        <span class="big-icon-text-btn__icon">
+          <t3kit:render.svg src="{data.icon}" class="{data.icon_class}" width="55px" height="55px" aria-hidden="true" />
+        </span>
       </f:if>
 
       <f:if condition="{data.header}">
-        <f:render partial="Header/Header" arguments="{
-          header: '{data.header}',
-          layout: '{data.header_layout}',
-          positionClass: 'big-icon-text-btn__header',
-          link: ''
-        }" />
+        <h3 class="big-icon-text-btn__header">
+          {data.header}
+        </h3>
       </f:if>
 
       <f:if condition="{data.bodytext}">
@@ -40,14 +39,14 @@
       <f:if condition="{data.link} && {flexform.disableWholeAreaLink} == 1">
         <f:link.typolink
           parameter="{data.link}"
-          class="big-icon-text-btn__link{f:if(condition: flexform.btnAsLink, then: '', else: ' btn btn-default')}">
+          class="big-icon-text-btn__link{f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
             {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
         </f:link.typolink>
       </f:if>
 
       <f:if condition="{flexform.disableWholeAreaLink} == 0">
           <span
-            class="big-icon-text-btn__sham-link {f:if(condition: flexform.btnAsLink, then: '', else: 'btn btn-default')}"
+            class="big-icon-text-btn__sham-link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}"
             aria-hidden="true">
               {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
           </span>
