--- a/theme/src/styles/content-elements/big-icon-text-button/_index.scss
+++ b/theme/src/styles/content-elements/big-icon-text-button/_index.scss
@@ -21,64 +21,93 @@
 // @use '../../bootstrap/mixins' as mixin;
 
 .big-icon-text-btn__wrp {
-    position: relative;
-    overflow: auto;
-    padding: 0 15px;
+  position: relative;
+  overflow: auto;
+  padding: 0 15px;
   margin: 0 -15px;
 }
 
 .big-icon-text-btn {
-    text-align: center;
-    padding: 50px 0 40px;
+  text-align: center;
+  padding: 50px 0 40px;
 }
 
 .big-icon-text-btn__link {
     // displays: flex;
+  position: relative;
+  z-index: 1;
+
+  &:after {
     position: relative;
-    z-index: 1;
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 8px;
+    padding: 0 3px;
+    top: 1px;
+  }
 
-    &:after {
-        // @include icons();
-
-        position: relative;
-        display: inline-block;
-        font-size: 20px;
-        margin-left: 8px;
-        padding: 0 3px;
-        top: 1px;
-    }
+  &.btn-primary {
+    color: #fff;
+  }
 }
 
 .big-icon-text-btn__p {
-    margin-bottom: 18px;
+  margin-bottom: 18px;
 }
 
 .big-icon-text-btn__icon {
-    padding: 30px 29px 30px 31px;
-    border: 2px solid tint(var.$primary, 70%);
-    color: var.$primary;
-    border-radius: 55px;
-    margin-right: 0;
-    margin-bottom: 10px;
-    font-size: 46px;
-    display: inline-block;
+  padding: 30px 29px 30px 31px;
+  border: 2px solid tint(var.$primary, 70%);
+  color: var.$primary;
+  border-radius: 55px;
+  margin-right: 0;
+  margin-bottom: 10px;
+  font-size: 46px;
+  display: inline-block;
 }
 
 .big-icon-text-btn__sham-link {
-    color: var.$primary;
+  color: var.$primary;
 
-    &:after {
-        // @include icons();
+  &:after {
+    position: relative;
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 8px;
+    padding: 0 3px;
+    top: 1px;
+  }
 
-        position: relative;
-        display: inline-block;
-        font-size: 20px;
-        margin-left: 8px;
-        padding: 0 3px;
-        top: 1px;
-    }
+  &.btn-primary {
+    color: #fff;
+  }
 }
 
+.big-icon-text-btn._whole-area-link:hover {
+  text-decoration: none;
+
+  .big-icon-text-btn__header,
+  .big-icon-text-btn__p {
+    color: lighten(var.$primary, 5);
+  }
+
+  .big-icon-text-btn__wrp {
+    background-color: transparentize(#fff, 0.9);
+  }
+
+  .big-icon-text-btn__sham-link {
+    &.btn-text {
+      color: lighten(var.$primary, 5);
+    }
+
+    &.btn-primary {
+      border-color: transparentize(var.$primary, 0.2);
+      background-color: transparentize(var.$primary, 0.2);
+    }
+  }
+}
+
+/*
 .big-icon-text-btn._whole-area-link .big-icon-text-btn__link {
     position: absolute;
     top: 0;
@@ -103,3 +132,4 @@
 .big-icon-text-btn._whole-area-link:hover .big-icon-text-btn__link {
     background-color: fade(#fff, 10%);
 }
+*/
