--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -11,7 +11,7 @@
 // @use 'content-elements/accordion';
 // @use 'content-elements/contacts-card';
 // @use 'content-elements/hero-image';
-// @use 'content-elements/icon-text-button';
+@use 'content-elements/icon-text-button';
 // @use 'content-elements/image-text-link';
 // @use 'content-elements/logo-carousel';
 // @use 'content-elements/parallax';
