[FEATURE] update picture element, add video, audio and textmedia elements

--- a/Resources/Private/Partials/ContentElements/Media/Figure.html
+++ b/Resources/Private/Partials/ContentElements/Media/Figure.html
@@ -14,7 +14,7 @@
       </f:defaultCase>
     </f:switch>
 
-    <figure class="figure-partial figure ">
+    <figure class="figure-partial figure figure-{type -> f:format.case(mode: 'lower')}">
 
       <f:render partial="Media/Type/{type}" arguments="{data: data, file:file}" optional="1"/>
 
