--- a/Resources/Private/Templates/ContentElements/Static/Textmedia.html
+++ b/Resources/Private/Templates/ContentElements/Static/Textmedia.html
@@ -1,43 +1,53 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:layout name="Default" />
-<f:section name="Header">
-
-  <f:if condition="{gallery.position.noWrap} != 1">
-    <f:render partial="Header/All" arguments="{_all}" />
-  </f:if>
-
-</f:section>
+<f:section name="Header" />
 <f:section name="Main">
 
-  <div
-    class="ce-textpic ce-{gallery.position.horizontal} ce-{gallery.position.vertical}{f:if(condition: gallery.position.noWrap, then: ' ce-nowrap')}">
-    <f:if condition="{gallery.position.vertical} != 'below'">
-      <f:render partial="Media/Gallery" arguments="{_all}" />
-    </f:if>
+  <f:switch expression="{data.imageorient}">
+    <f:case value="1">
+      <f:variable name="var">text-media-above-right</f:variable>
+    </f:case>
+    <f:case value="2">
+      <f:variable name="var">text-media-above-left</f:variable>
+    </f:case>
+    <f:case value="8">
+      <f:variable name="var">text-media-below-center</f:variable>
+    </f:case>
+    <f:case value="9">
+      <f:variable name="var">text-media-below-right</f:variable>
+    </f:case>
+    <f:case value="10">
+      <f:variable name="var">text-media-below-left</f:variable>
+    </f:case>
+    <f:case value="25">
+      <f:variable name="var">text-media-right</f:variable>
+    </f:case>
+    <f:case value="26">
+      <f:variable name="var">text-media-left</f:variable>
+    </f:case>
+    <f:defaultCase>
+      <f:variable name="var">text-media-above-center</f:variable>
+    </f:defaultCase>
+  </f:switch>
 
-    <f:if condition="{data.bodytext}">
-      <f:then>
-        <div class="ce-bodytext">
-          <f:if condition="{gallery.position.noWrap}">
-            <f:render partial="Header/All" arguments="{_all}" />
-          </f:if>
+
+  <div class="textmedia-ce {var}">
+
+    <div class="textmedia-ce__media">
+      <f:render partial="Media/Figure" arguments="{_all}" />
+    </div>
+
+    <div class="textmedia-ce__text">
+      <div class="textmedia-ce__header">
+        <f:render partial="Header/All" arguments="{_all}" />
+      </div>
+      <f:if condition="{data.bodytext}">
+        <div class="textmedia-ce__bodytext">
           <f:format.html>{data.bodytext}</f:format.html>
         </div>
-      </f:then>
-      <f:else>
-        <f:if condition="{gallery.position.noWrap}">
-          <f:if condition="{data.header}">
-            <div class="ce-bodytext">
-              <f:render partial="Header/All" arguments="{_all}" />
-            </div>
-          </f:if>
-        </f:if>
-      </f:else>
-    </f:if>
+      </f:if>
+    </div>
 
-    <f:if condition="{gallery.position.vertical} == 'below'">
-      <f:render partial="Media/Gallery" arguments="{_all}" />
-    </f:if>
   </div>
 
 </f:section>
