--- a/Resources/Private/Partials/ContentElements/Media/Type/Image.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Image.html
@@ -1,31 +1,33 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
-<figure class="image">
-  <f:if condition="{file.link}">
-    <f:then>
-      <f:link.typolink parameter="{file.link}" title="{file.title}">
-        <f:render partial="Media/Rendering/Image"
-          arguments="{file: file, dimensions: dimensions, settings: settings}" />
-      </f:link.typolink>
-    </f:then>
-    <f:else>
-      <f:if condition="{data.image_zoom}">
-        <f:then>
-          <f:comment><!-- TODO: fix "clickEnlarge", FSC have a clickEnlarge viewhelper here--></f:comment>
-            <f:render partial="Media/Rendering/Image"
-              arguments="{file: file, dimensions: dimensions, settings: settings}" />
-        </f:then>
-        <f:else>
-          <f:render partial="Media/Rendering/Image"
-            arguments="{file: file, dimensions: dimensions, settings: settings}" />
-        </f:else>
-      </f:if>
-    </f:else>
-  </f:if>
-  <f:if condition="{file.description}">
-    <figcaption class="image-caption">
-      {file.description -> f:format.nl2br()}
-    </figcaption>
-  </f:if>
-</figure>
+
+  <div class="image-partial">
+    <f:if condition="{file.link}">
+      <f:then>
+        <f:link.typolink class="image-partial__link" parameter="{file.link}" title="{file.title}">
+          <f:render partial="Media/Render/Image" arguments="{data: data, image:file}" />
+        </f:link.typolink>
+      </f:then>
+
+      <f:else>
+        <f:if condition="{data.image_zoom}">
+
+          <f:then>
+            <div class="image-partial__zoom">
+              <f:comment>TODO: add lightbox functionality</f:comment>
+              <f:render partial="Media/Render/Image" arguments="{data: data, image:file}" />
+            </div>
+          </f:then>
+
+          <f:else>
+            <div class="image-partial__simple">
+              <f:render partial="Media/Render/Image" arguments="{data: data, image:file}" />
+            </div>
+          </f:else>
+
+        </f:if>
+      </f:else>
+
+    </f:if>
+  </div>
 
 </html>
