--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -19,6 +19,7 @@
 // @use 'content-elements/slider';
 // @use 'content-elements/social-icons';
 @use 'content-elements/textpic';
+@use 'content-elements/textmedia';
 
 // ===== plugins =====
 // @use 'plugins/news/';
@@ -26,6 +27,7 @@
 
 // ===== helpers =====
 // @use 'helpers/content-margins';
+@use 'helpers/figure-types';
 
 // ===== print =====
 // @use 'print';
