--- a/theme/src/styles/content-elements/icon-text-button/_index.scss
+++ b/theme/src/styles/content-elements/icon-text-button/_index.scss
@@ -1,4 +1,24 @@
+// =========================================================
+// !!! include media query inside the selector==============
+// =========================================================
+// Example:
+// @use '../../bootstrap/mixins' as mixin;
+// header {
+//   width: 200px;
+
+//   @include mixin.media-breakpoint-up(md) {
+//     width: 100px;
+//   }
+// }
+// =========================================================
+// =========================================================
+
+// use t3kit variables based on bootstrap variables
+// check "theme/src/styles/_variables.scss"
 @use '../../variables' as var;
+// use bootstrap mixins based on t3kit variable overrides
+// check "theme/src/styles/bootstrap/mixins/_index.scss"
+// @use '../../bootstrap/mixins' as mixin;
 
 .icon-text-btn__wrp {
   position: relative;
@@ -25,90 +45,10 @@
   float: right;
 }
 
-.icon-text-btn__link {
-  position: relative;
-  z-index: 1;
-
-  &:after {
-    position: relative;
-    display: inline-block;
-    font-size: 20px;
-    margin-left: 8px;
-    padding: 0 3px;
-    top: 1px;
-  }
-
-  &.btn-primary {
-    color: #fff;
-  }
-}
-
 .icon-text-btn__p {
   margin-bottom: 18px;
 }
 
-.icon-text-btn__sham-link {
-  color: var.$primary;
-
-  &:after {
-    position: relative;
-    display: inline-block;
-    font-size: 20px;
-    margin-left: 8px;
-    padding: 0 3px;
-    top: 1px;
-  }
-
-  &.btn-primary {
-    color: #fff;
-  }
+.icon-text-btn._whole-area-link:hover .icon-text-btn__link._whole-area-link:after {
+  background-color: transparentize(#fff, 0.9);
 }
-
-.icon-text-btn._whole-area-link:hover {
-  text-decoration: none;
-
-  .icon-text-btn__header,
-  .icon-text-btn__p {
-    color: lighten(var.$primary, 0.2);
-  }
-
-  .icon-text-btn__wrp {
-    background-color: transparentize(#fff, 0.9);
-  }
-
-  .icon-text-btn__sham-link {
-    &.btn-text {
-      color: lighten(var.$primary, 5);
-    }
-
-    &.btn-primary {
-      border-color: transparentize(var.$primary, 0.2);
-      background-color: transparentize(var.$primary, 0.2);
-    }
-  }
-}
-
-/*
-.icon-text-btn._whole-area-link .icon-text-btn__link {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  font-size: 0;
-  text-indent: -9999px;
-  background: transparent;
-  border: none;
-  z-index: 2;
-}
-
-.frontend_editing .icon-text-btn._whole-area-link .icon-text-btn__link {
-  z-index: -1;
-}
-
-.icon-text-btn._whole-area-link:hover .icon-text-btn__link {
-  background-color: fade(#fff, 10%);
-}
-*/
-// =========================================================
-// =========================================================
