--- a/Resources/Private/Templates/ContentElements/Static/IconTextButton.html
+++ b/Resources/Private/Templates/ContentElements/Static/IconTextButton.html
@@ -5,19 +5,6 @@
 <f:section name="Header" />
 
 <f:section name="Main">
-  <f:if condition="{flexform.disableWholeAreaLink} == 1">
-    <f:then>
-      <f:render section="Content" arguments="{_all}" />
-    </f:then>
-    <f:else>
-      <f:link.typolink parameter="{data.link}">
-        <f:render section="Content" arguments="{_all}" />
-      </f:link.typolink>
-    </f:else>
-  </f:if>
-</f:section>
-
-<f:section name="Content">
   <div class="icon-text-btn__wrp">
     <div class="icon-text-btn">
       <div class="icon-text-btn__icon-and-header">
@@ -26,9 +13,11 @@
             <t3kit:render.svg src="{data.icon}" class="{data.icon_class}" width="24px" height="24px" aria-hidden="true" />
           </span>
         </f:if>
-        <h3 class="icon-text-btn__header">
-          <f:if condition="{data.header}">{data.header}</f:if>
-        </h3>
+        <f:if condition="{data.header}">
+          <h3 class="icon-text-btn__header">
+            {data.header}
+          </h3>
+        </f:if>
       </div>
 
       <f:if condition="{data.bodytext}">
@@ -38,16 +27,14 @@
       <f:if condition="{data.link} && {flexform.disableWholeAreaLink} == 1">
         <f:link.typolink
           parameter="{data.link}"
-          class="icon-text-btn__link{f:if(condition: flexform.btnAsLink, then: 'btn btn-text', else: ' btn btn-primary')}">
+          class="icon-text-btn__link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
             {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
         </f:link.typolink>
       </f:if>
       <f:if condition="{flexform.disableWholeAreaLink} == 0">
-        <span
-          class="big-icon-text-btn__sham-link {f:if(condition: flexform.btnAsLink, then: 'btn btn-text', else: 'btn btn-primary')}"
-          aria-hidden="true">
-            {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
-        </span>
+        <f:link.typolink parameter="{data.link}" class="icon-text-btn__link _whole-area-link stretched-link {f:if(condition: flexform.btnAsLink, then: 'btn-text', else: ' btn btn-primary')}">
+          {f:if(condition: data.link_title, then: data.link_title, else: data.header)}
+        </f:link.typolink>
       </f:if>
     </div>
   </div>
