--- a/Resources/Private/Templates/ContentElements/Static/HeroImage.html
+++ b/Resources/Private/Templates/ContentElements/Static/HeroImage.html
@@ -4,28 +4,27 @@
 <f:section name="Header" />
 <f:section name="Main">
   <!-- theme_t3kit: Templates/ContentElements/HeroImage.html [begin] -->
-  <f:if condition="{image}">
-    <div
-      class="hero-image js__hero-image {f:cObject(typoscriptObjectPath:'lib.responsiveBackgroundImage', data:image.0.uid)}">
+  <f:if condition="{files}">
+    <div class="hero-image js__hero-image">
+      <f:render partial="Media/Figure" arguments="{_all}" />
       <div
-        class="hero-image__caption-wrp {f:if(condition: '{settings.horizontalAlignment} == 0', then: '_left-align')}{f:if(condition: '{settings.horizontalAlignment} == 1', then: '_center-align')}{f:if(condition: '{settings.horizontalAlignment} == 2', then: '_right-align')}"
-        style="height: {settings.elementHeight}px;{f:if(condition: settings.transparentLayer, then: ' background-color:{settings.transparentLayer};')}">
+        class="hero-image__caption-wrp {f:if(condition: '{flexform.horizontalAlignment} == 0', then: '_left-align')}{f:if(condition: '{flexform.horizontalAlignment} == 1', then: '_center-align')}{f:if(condition: '{flexform.horizontalAlignment} == 2', then: '_right-align')} {f:if(condition:'{flexform.transparentLayer} == 0', then: '', else: '_caption-overlay-{flexform.transparentLayer}')}">
         <div
-          class="hero-image__caption {f:if(condition: '{settings.animationStyle} == 0', then: '', else: '_caption-animated-{settings.animationStyle}')} {f:if(condition: '{settings.verticalAlignment} == 0', then: '_top')}{f:if(condition: '{settings.verticalAlignment} == 2', then: '_bottom')}">
+          class="hero-image__caption {f:if(condition: '{flexform.animationStyle} == 0', then: '', else: '_caption-animated-{flexform.animationStyle}')} {f:if(condition: '{flexform.verticalAlignment} == 0', then: '_top')}{f:if(condition: '{flexform.verticalAlignment} == 2', then: '_bottom')}">
           <f:if condition="{data.header}">
             <h2 class="hero-image__caption-header" data-header-content='{data.header}'>{data.header}</h2>
           </f:if>
+          <f:if condition="{data.subheader}">
+            <h3 class="hero-image__caption-subheader" data-subheader-content='{data.subheader}'>{data.subheader}</h3>
+          </f:if>
           <f:if condition="{data.bodytext}">
-            <h3 class="hero-image__caption-subheader" data-subheader-content='{data.bodytext}'>{data.bodytext}</h3>
+            <p class="hero-image__caption-p line-clamp" data-text-content='{data.bodytext}'>{data.bodytext}</p>
           </f:if>
-          <f:if condition="{settings.elementText}">
-            <p class="hero-image__caption-p" data-text-content='{settings.elementText}'>{settings.elementText}</p>
-          </f:if>
-          <f:if condition="{data.header_link}">
+          <f:if condition="{data.link}">
             <div class="hero-image__caption-link-wrp">
-              <f:link.typolink parameter="{data.header_link}" title="{data.header}"
-                class="hero-image__caption-link {f:if(condition: settings.linkAsBtn, then: 'btn btn-default', else: '')}">
-                {data.subheader}</f:link.typolink>
+              <f:link.typolink parameter="{data.link}" title="{data.header}"
+                class="hero-image__caption-link {f:if(condition: flexform.linkAsBtn, then: 'btn', else: '')}">
+                {data.link_title}</f:link.typolink>
             </div>
           </f:if>
         </div>
