--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -12,6 +12,8 @@
 // @use 'content-elements/contacts-card';
 // @use 'content-elements/hero-image';
 @use 'content-elements/icon-text-button';
+@use 'content-elements/hero-image';
+// @use 'content-elements/icon-text-button';
 // @use 'content-elements/image-text-link';
 // @use 'content-elements/logo-carousel';
 // @use 'content-elements/parallax';
@@ -28,6 +30,7 @@
 // ===== helpers =====
 // @use 'helpers/content-margins';
 @use 'helpers/figure-types';
+@use 'helpers/line-clamp.scss';
 
 // ===== print =====
 // @use 'print';
