[TASK] update CE-s, update translations

--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -41,9 +41,9 @@
   <main class="start-page">
 
     <section class="start-page__top-content">
-      <div class="start-page__top-content-container container">
+      <div class="start-page__top-content-container container-fluid">
         <div class="row">
-          <div class="col-md">
+          <div class="col-md p-0">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
           </div>
         </div>
